# kvm-serial

./: .gitignore  .pre-commit-config.yaml  .pymarkdown.json  404.html  BUILD_NOTES.md  CONTRIBUTING.md  README.md  codecov.yml  index.html  kvm-gui.spec  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: README.md  build-binaries.yml  build-linux-debug.yml  docs.yml  lint.yml  markdownlint.yml  release.yml  test.yml
CH9329_GUIDE/: index.html
CH9329_PROTO/: index.html
CH9350L_GUIDE/: index.html
CH9350L_PROTO/: index.html
CONTRIBUTING/: index.html
INSTALLATION/: index.html
MODES/: index.html
QUICK_START/: index.html
SUPPORTED_DEVICES/: index.html
TESTING/: index.html
VIDEO/: index.html
assets/: README.md  create_icon.py  entitlements.plist  icon.icns
docs/: BUILD.md  BUILD_NOTES.md  CH9329_GUIDE.md  CH9329_PROTO.md  CH9350L_GUIDE.md  CH9350L_PROTO.md  CONTRIBUTING.md  INSTALLATION.md  MODES.md  QUICK_START.md  SUPPORTED_DEVICES.md  TESTING.md  VIDEO.md  index.md  workflows.md
kvm_serial/: control.py  kvm.py  qt_ui.py  ui.py
kvm_serial/backend/: inputhandler.py  keyboard.py  manager.py  mouse.py  video.py
kvm_serial/utils/: __init__.py  ch9329.py  ch9350.py  communication.py  keyboard_layouts.py  resolution_probe.py  settings.py  utils.py
scripts/: generate_docs_index.py
search/: search_index.json
tests/: _utilities.py  conftest.py  test_control.py  test_kvm.py  test_kvm_init.py
tests/backend/: conftest.py  test_inputhandler.py  test_keyboard.py  test_manager.py  test_mouse.py  (+1 more)
workflows/: index.html
(+31 files in other folders)
