[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvm-serial"
version = "1.5.0"
authors = [{ name="Samantha Finnigan", email="1038320+sjmf@users.noreply.github.com" }]
description = "Python package for interfacing with CH9329 KVM devices"
readme = "README.md"

requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    ]

license = "MIT"
license-files = ["LICEN[CS]E*"]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-watch",
    "pytest-timeout",
    "black", 
    "pre-commit"
    ]

[project.urls]
Homepage = "https://github.com/sjmf/kvm-serial"
Issues = "https://github.com/sjmf/kvm-serial/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["kvm_serial*"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''/(
    \._| # hidden files and directories
    build/
    dist/
    \.eggs/
    \.git/
    \.hg/
    \.mypy_cache/
    \.tox/
    \.venv/
    _build/
    buck-out/
    __pycache__/
    *.egg-info/
    )/'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=kvm_serial",
    "--cov-report=term-missing",
    "--cov-report=lcov:lcov.info"
    ]
timeout = 5


[tool.coverage.run]
source = ["kvm_serial"]
